--- a/GDI_Wrapper/GDI_Wrapper.vcxproj
+++ b/GDI_Wrapper/GDI_Wrapper.vcxproj
@@ -97,7 +97,7 @@
       <PreprocessorDefinitions>_DEBUG;GDIWRAPPER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include;$(SolutionDir)source</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
@@ -115,7 +115,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;GDIWRAPPER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include;$(SolutionDir)source</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
@@ -157,7 +157,7 @@
       <PreprocessorDefinitions>NDEBUG;GDIWRAPPER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include;$(SolutionDir)source</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
@@ -169,28 +169,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\Wrapper\Export\Export.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Color.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Graphics.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Shapes\CircleShape.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Shapes\EllipseShape.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Shapes\RectangleShape.hpp" />
-    <ClInclude Include="..\include\Wrapper\Graphics\Shapes\Shape.hpp" />
-    <ClInclude Include="..\include\Wrapper\Link.hpp" />
-    <ClInclude Include="..\include\Wrapper\System\Clock.hpp" />
-    <ClInclude Include="..\include\Wrapper\Window\Keyboard.hpp" />
-    <ClInclude Include="..\include\Wrapper\Window\Window.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Export\Export.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Color.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Graphics.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Shapes\CircleShape.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Shapes\EllipseShape.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Shapes\RectangleShape.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Graphics\Shapes\Shape.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Link.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\System\Clock.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\System\Time.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Window\Keyboard.hpp" />
+    <ClInclude Include="..\include\GDI_Wrapper\Window\Window.hpp" />
     <ClInclude Include="framework.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\source\Wrapper\Graphics\Color.cpp" />
-    <ClCompile Include="..\source\Wrapper\Graphics\Graphics.cpp" />
-    <ClCompile Include="..\source\Wrapper\Graphics\Shapes\CircleShape.cpp" />
-    <ClCompile Include="..\source\Wrapper\Graphics\Shapes\EllipseShape.cpp" />
-    <ClCompile Include="..\source\Wrapper\Graphics\Shapes\RectangleShape.cpp" />
-    <ClCompile Include="..\source\Wrapper\System\Clock.cpp" />
-    <ClCompile Include="..\source\Wrapper\Window\Keyboard.cpp" />
-    <ClCompile Include="..\source\Wrapper\Window\Window.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Graphics\Color.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Graphics\Graphics.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Graphics\Shapes\CircleShape.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Graphics\Shapes\EllipseShape.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Graphics\Shapes\RectangleShape.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\System\Clock.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\System\Time.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Window\Keyboard.cpp" />
+    <ClCompile Include="..\source\GDI_Wrapper\Window\Window.cpp" />
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
